objects/ASI_CRM_Call_Log_vs_Call_Plan__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Call_Log_matched_Call_Plan__c</fullName>
        <label>Call Log (matched Call Plan)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Call_Plan__c</fullName>
        <label>Call Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Criteria__c</fullName>
        <label>Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yesterday</fullName>
                </value>
                <value>
                    <fullName>MTD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Call Log vs. Call Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}{DD}-{0000}</displayFormat>
        <label>Call Log vs. Call Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Logs vs. Call Plans</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Call_Log_vs_Call_Plan</fullName>
        <active>true</active>
        <label>ASI_CRM_CN_Call_Log_vs_Call_Plan</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>